--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -9,3 +9,9 @@ user2:
   posts_counter: 3
   bio: actor
   photo: https://example.com/gibson.jpg
+
+user3:
+  name: Russel Crowe
+  posts_counter: 2
+  bio: actor
+  photo: https://example.com/russel.jpg
